--- a/06/Untitled-6.html
+++ b/06/Untitled-6.html
@@ -10,10 +10,10 @@
 
 <body>
     <script>
-        let star = "*";
+        let star = "}{";
         for (let i = 0; i <= 20; i++) {
             console.log(star);
-            star = star + "*";
+            star = star + "*}{";
         }
     </script>
 
